--- a/index.css
+++ b/index.css
@@ -1,10 +1,21 @@
 .title{
 background:#008700;
 }
-.chapter{
-background:#00B100;
+.chapter li{
 font-size:20px;
 text-decoration:none;
+list-style-type:none;
+display:inline-block;
+width:24%;
+margin:0px 0px;
+}
+.chapter{
+background:#00B100;
+margin:0px 0px;
+}
+.chapter ul{
+margin:0px 0px;
+padding-left:0px;
 }
 .news{
 background:#168E1F
